// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div
  data-reactroot=""
>
  <h1>
    Why would you leave us?
  </h1>
  <div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 7 -->
        I do not understand how to use this.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 8 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 12 -->
        I do not need this.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 13 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 17 -->
        I prefer other apps.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 18 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 22 -->
        I cannot find the features that I want.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 23 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 27 -->
        I found this had too many bugs.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 28 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 32 -->
        I found this was too expensive.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 33 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 37 -->
        I found this was too slow.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 38 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 42 -->
        Other reason(s)...
        <!-- /react-text -->
      </label>
      <!-- react-empty: 43 -->
    </div>
  </div>
  <div
    style="margin-top: 2rem;"
  >
    <!-- react-text: 45 -->
    Comments:
    <!-- /react-text -->
    <div>
      <textarea
        name="comment"
        style="border: 1px solid black;"
        type="text"
      />
    </div>
  </div>
  <div>
    <button>
      Back
    </button>
    <button
      disabled=""
    >
      Next
    </button>
  </div>
</div>
`;

exports[`snapshot with no show comment 1`] = `
<div
  data-reactroot=""
>
  <h1>
    Why would you leave us?
  </h1>
  <div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 7 -->
        I do not understand how to use this.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 8 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 12 -->
        I do not need this.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 13 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 17 -->
        I prefer other apps.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 18 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 22 -->
        I cannot find the features that I want.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 23 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 27 -->
        I found this had too many bugs.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 28 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 32 -->
        I found this was too expensive.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 33 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 37 -->
        I found this was too slow.
        <!-- /react-text -->
      </label>
      <!-- react-empty: 38 -->
    </div>
    <div>
      <label>
        <input
          type="checkbox"
          value="on"
        />
        <!-- react-text: 42 -->
        Other reason(s)...
        <!-- /react-text -->
      </label>
      <!-- react-empty: 43 -->
    </div>
  </div>
  <!-- react-empty: 44 -->
  <div>
    <button>
      Back
    </button>
    <button
      disabled=""
    >
      Next
    </button>
  </div>
</div>
`;
